--- a/media/less/style/chat/browser.less
+++ b/media/less/style/chat/browser.less
@@ -49,6 +49,7 @@
 
 .lcb-rooms-list {
     overflow-y: auto;
+    -webkit-overflow-scrolling: touch;
     .transform(translate3d(0,0,0));
 }
 
