--- a/media/less/style/chat/messages.less
+++ b/media/less/style/chat/messages.less
@@ -9,6 +9,7 @@
     padding: 0;
     margin: 0;
     overflow: auto;
+    -webkit-overflow-scrolling: touch;
     .flex(1);
     .transform(translate3d(0,0,0));
 }
