--- a/media/less/style/chat/rooms.less
+++ b/media/less/style/chat/rooms.less
@@ -174,9 +174,10 @@
 }
 
 .lcb-room-sidebar-list {
-    overflow: hidden;
     border-radius: 3px;
+    overflow: hidden;
     overflow-y: auto;
+    -webkit-overflow-scrolling: touch;
 }
 
 .lcb-room-sidebar-item {
